--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,7 +58,7 @@ body {
 // app-component
 app-root {
     width: 90%;
-    height: 540px; /* mostly likely remove */
+    /* height: 540px; mostly likely remove */
 
     display: flex;
     flex-direction: column;
